# ITMO-FP-y2021

./: .gitignore  README.md
hw0/: README.md  hw0.cabal
hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
hw1/: README.md  hw1.cabal
hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
hw2/: README.md  hw2.cabal
hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
