name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/aslastin/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Aleksandr Slastin
maintainer:          slastin.sasha@gmail.com
copyright:           2022 Aleksandr Slastin

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
    HW3.Action
    HW3.Base
    HW3.Parser
    HW3.Pretty
    HW3.Evaluator
  ghc-options:         -Wall
  build-depends:
     base >= 4.9 && < 5
   , megaparsec
   , prettyprinter
   , scientific
   , prettyprinter-ansi-terminal
   , containers
   , text
   , bytestring
   , transformers
   , parser-combinators
   , time
   , foldl
   , zlib
   , serialise
   , directory
   , mtl
   , time
   , random
  default-language:    Haskell2010

executable hi
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hw3
    , haskeline
    , transformers
    , megaparsec
    , containers
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
  default-language:    Haskell2010
